# agent-radar

./: .gitignore  README.md  USER.example.md  config.example.toml  pyproject.toml
config/: blocklist.yaml  config.example.toml  sources.yaml  taxonomy.yaml
data/real-llm-runs/: 2026-06-30-critic-adversarial.md  2026-06-30-deepread-depth-checkpoint.md  2026-06-30-real-daily-run.md  2026-06-30-rerank-personalization-ab.md  2026-07-04-rerank-benchmark-exemption-probe.md  2026-07-06-timeliness-closeout.md  2026-07-06-v5-regen.md
deploy/: README.md  com.agentradar.daily.plist  com.agentradar.review.plist  com.agentradar.serve.plist  dingtalk-card-template.json  site_worker.js
docs/: ARCHITECTURE_AUDIT.md  PHASES.md  REQUIREMENTS.md  SELF_AUDIT_2026-07-07.md  SOURCE_GUARANTEES.md  SPEC.md  sample-digest.md
prompts/: critic.md  deepread.md  eval_faithfulness.md  eval_rank.md  rerank.md  review.md  triage.md
radar/: cli.py
scripts/: deliver_cards.py  deploy_reader.py  install-launchd.sh  leak_scan.py  list_card_templates.py  probe_rerank_benchmark_exemption.py  prove_critic.py  prove_deepread.py  prove_rerank_personalization.py  prove_triage_exemption.py  push_note.py  rebuild_site.py  regen_v5.py  run-daily.sh  run-review.sh  run-serve.sh  setup_vote_backend.sh  whoami.py
tests/: test_arxiv.py  test_arxiv_source.py  test_core.py  test_critic.py  test_deepread.py  test_dingtalk.py  test_docx_render.py  test_eval.py  test_feedback.py  test_fetch_dedup.py  test_hn_source.py  test_llm_timeouts.py  test_memory.py  test_review.py  test_review_publish.py  test_site.py  test_source_backoff.py  test_timeliness.py  test_triage_exemption.py  test_trigger.py  test_versioning.py  test_web_reader.py  test_web_render.py  test_webvotes.py
(+64 files in other folders)
