[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-radar"
version = "0.1.0"
description = "会推送、会讲解讨论、会自我进化的 Agent/Harness 前沿情报 agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "feedparser>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
# P1+ (memory/retrieval): installed when those phases land
memory = [
    "sqlite-vec>=0.1.1",
    "FlagEmbedding>=1.2",   # BGE-M3 local embeddings
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
radar = "radar.cli:main"

[tool.setuptools.packages.find]
include = ["radar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
